fix z-index loader

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -75,6 +75,7 @@ section {
     }
     100%{
       opacity: 0;
+      z-index: -1;
     }
   }
 }
